feat: calimero calls through the calimero-wallet-utils lib
Verified accounts can be synced, new keys added, and transactions
sent to Calimero with x-signature in header are passing

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -45,6 +45,7 @@
         "big.js": "^6.2.1",
         "bip39-light": "^1.0.7",
         "borsh": "1.0.0",
+        "calimero-wallet-utils": "^0.0.1",
         "connected-react-router": "^6.6.0",
         "dataloader": "^2.1.0",
         "escape-html": "^1.0.3",
